--- a/app/inertia/css/app.css
+++ b/app/inertia/css/app.css
@@ -103,14 +103,30 @@
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+}
+
+@layer base {
+  :root {
+    --sidebar: oklch(0.985 0 0);
+    --sidebar-foreground: oklch(0.145 0 0);
+    --sidebar-primary: oklch(0.205 0 0);
+    --sidebar-primary-foreground: oklch(0.985 0 0);
+    --sidebar-accent: oklch(0.269 0 0);
+    --sidebar-accent-foreground: oklch(0.205 0 0);
+    --sidebar-border: oklch(0.922 0 0);
+    --sidebar-ring: oklch(60.325% 0.00007 271.152);
+  }
+
+  .dark {
+    --sidebar: oklch(0.205 0 0);
+    --sidebar-foreground: oklch(0.985 0 0);
+    --sidebar-primary: oklch(0.488 0.243 264.376);
+    --sidebar-primary-foreground: oklch(0.985 0 0);
+    --sidebar-accent: oklch(0.269 0 0);
+    --sidebar-accent-foreground: oklch(0.985 0 0);
+    --sidebar-border: oklch(1 0 0 / 10%);
+    --sidebar-ring: oklch(0.439 0 0);
+  }
 }
 
 @layer base {
@@ -212,6 +228,10 @@ nav.tabbar ul li a:hover {
 /*
   Profile Page:
 */
+.profile-header {
+  margin-top: 2rem;
+}
+
 .profile-overview {
   display: flex;
   flex-direction: row;
@@ -226,7 +246,7 @@ nav.tabbar ul li a:hover {
 }
 
 .profile-details {
-  margin: 1rem 14px;
+  margin: 0 14px 1rem;
 }
 
 .profile-details p {
@@ -241,7 +261,7 @@ nav.tabbar ul li a:hover {
 }
 
 .profile-content {
-  padding: 14px;
+  padding: 0 calc(var(--spacing) * 3);
 }
 
 [class^='notification'] {
@@ -251,8 +271,4 @@ nav.tabbar ul li a:hover {
 
 .notification-error {
   background: lightcoral;
-}
-
-.ask-form {
-  margin: 1rem 0;
 }
